{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 9,
  "lineage": "aadd5d57-ebc0-2a78-cc33-9111ca0a1a44",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Olu-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1551d8f9-45a7-46c8-b324-0f71374d9541/resourceGroups/Terraformrg/providers/Microsoft.Network/networkInterfaces/Olu-nic",
            "internal_domain_name_suffix": "xzhm4yv3kqpexj1df2oi3qdtjd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1551d8f9-45a7-46c8-b324-0f71374d9541/resourceGroups/Terraformrg/providers/Microsoft.Network/virtualNetworks/OluVnet/subnets/Olu-subnet"
              }
            ],
            "location": "westeurope",
            "name": "Olu-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "Terraformrg",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Terraformrg",
            "azurerm_subnet.Olu-subnet",
            "azurerm_virtual_network.OluVnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Olu-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1551d8f9-45a7-46c8-b324-0f71374d9541/resourceGroups/Terraformrg/providers/Microsoft.Network/networkSecurityGroups/Olu-sg",
            "location": "westeurope",
            "name": "Olu-sg",
            "resource_group_name": "Terraformrg",
            "security_rule": [],
            "tags": {
              "environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Olu-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/1551d8f9-45a7-46c8-b324-0f71374d9541/resourceGroups/Terraformrg/providers/Microsoft.Network/networkSecurityGroups/Olu-sg/securityRules/Olu-rule",
            "name": "Olu-rule",
            "network_security_group_name": "Olu-sg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Terraformrg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.Olu-sg",
            "azurerm_resource_group.Terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Olu-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1551d8f9-45a7-46c8-b324-0f71374d9541/resourceGroups/Terraformrg/providers/Microsoft.Network/virtualNetworks/OluVnet/subnets/Olu-subnet",
            "name": "Olu-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Terraformrg",
            "virtual_network_name": "OluVnet"
          },
          "dependencies": [
            "azurerm_resource_group.Terraformrg",
            "azurerm_virtual_network.OluVnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Olusecgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1551d8f9-45a7-46c8-b324-0f71374d9541/resourceGroups/Terraformrg/providers/Microsoft.Network/virtualNetworks/OluVnet/subnets/Olu-subnet",
            "network_security_group_id": "/subscriptions/1551d8f9-45a7-46c8-b324-0f71374d9541/resourceGroups/Terraformrg/providers/Microsoft.Network/networkSecurityGroups/Olu-sg",
            "subnet_id": "/subscriptions/1551d8f9-45a7-46c8-b324-0f71374d9541/resourceGroups/Terraformrg/providers/Microsoft.Network/virtualNetworks/OluVnet/subnets/Olu-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.Olu-sg",
            "azurerm_resource_group.Terraformrg",
            "azurerm_subnet.Olu-subnet",
            "azurerm_virtual_network.OluVnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "OluVnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "62cf4ebe-54bd-4b1e-a763-2f1c8ec0734b",
            "id": "/subscriptions/1551d8f9-45a7-46c8-b324-0f71374d9541/resourceGroups/Terraformrg/providers/Microsoft.Network/virtualNetworks/OluVnet",
            "location": "westeurope",
            "name": "OluVnet",
            "resource_group_name": "Terraformrg",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Terraformrg"
          ]
        }
      ]
    }
  ]
}